# aegis

./: .bitcoin.conf  .env  .gitignore  .markdownlint.json  COPYING  Cargo.toml  GNU-AGPL-3.0  LICENSE  LICENSE.md  README.md  canister_ids.json  dfx.json  jest.config.ts  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  rustfmt.toml  tsconfig.json
.github/workflows/: aegis-test.yml
candid/: aegis_ledger.did
declarations/accounts/: accounts.did.d.ts  accounts.did.js  index.d.ts  index.js
declarations/aegis_index/: index.d.ts  index.js
declarations/aegis_ledger/: index.d.ts  index.js
declarations/ckbtc_ledger/: index.js
declarations/ckbtc_minter/: ckbtc_minter.did.d.ts  ckbtc_minter.did.js  index.d.ts  index.js
declarations/cketh_ledger/: index.js
declarations/cketh_minter/: cketh_minter.did.d.ts  cketh_minter.did.js  index.d.ts  index.js
declarations/ckusdt_ledger/: index.js
declarations/icp_ledger/: icp_ledger.did.d.ts
declarations/insurance/: index.d.ts  index.js  insurance.did.d.ts  insurance.did.js
declarations/kyt/: index.js  kyt.did.d.ts
declarations/main/: main.did.d.ts  main.did.js
declarations/options/: index.d.ts  index.js  options.did.d.ts  options.did.js
declarations/xrc/: index.js
scripts/: bitcoin.sh  build_wasms.sh  candid.sh  cleanup.sh  deploy.sh  deploy_ic.sh  dev.sh  helpers.sh  ledgers.sh  test.sh  uninstall_code.sh
src/accounts/: Cargo.toml  accounts.did
src/accounts/src/: account.rs  enums.rs  guard.rs  impls.rs  lib.rs  memory.rs  methods.rs  mgmt.rs  types.rs  utils.rs
src/accounts/src/ledgers/: ledgers.rs  methods.rs  mod.rs  services.rs  types.rs
src/canisters/accounts/: Cargo.toml  accounts.did
src/canisters/accounts/src/: guard.rs  lib.rs  memory.rs
src/canisters/insurance/: Cargo.toml  insurance.did
src/canisters/insurance/src/: lib.rs  memory.rs
src/canisters/main/: Cargo.toml  main.did
src/canisters/main/src/: guard.rs  lib.rs  memory.rs
src/canisters/options/: Cargo.toml  options.did
src/canisters/options/src/: guard.rs  lib.rs  memory.rs
src/canisters/options/src/api/: mod.rs  state.rs
src/canisters/options/src/api/interfaces/: constants.rs  exchange.rs  lifecycle.rs  mod.rs  options.rs  options_assets.rs  options_operations.rs  premium.rs  state.rs  trade.rs
src/canisters/options/src/api/lifecycle/: lifecycle_candid.rs  mod.rs
src/canisters/options/src/api/options/: conversions.rs  filters.rs  mod.rs  options_candid.rs  retrieve.rs  store.rs  timers.rs
src/canisters/options/src/api/options/ethereum/: mod.rs  options_trade.rs
src/canisters/options/src/api/options/icrc/: options_trade.rs
src/canisters/options/src/api/options/premium/: conversions.rs  european_options.rs  mod.rs
src/canisters/options/src/api/options/premium/model/: black_scholes_merton.rs  mod.rs
src/canisters/options/src/api/utils/: amount_conversion.rs  constants.rs  get_icrc_ledger_ids.rs  mod.rs
src/canisters/options/src/lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
src/canisters/options/src/queries/: checkers.rs  constants.rs  mod.rs  options.rs
src/canisters/options/src/updates/: checkers.rs  constants.rs  mod.rs  options.rs
src/declarations/xrc/: index.js  xrc.did.d.ts  xrc.did.js
src/ledgers/: cketh_ledger.wasm  icp_ledger.wasm
src/libraries/blackscholes-rust/: Cargo.toml
src/libraries/blackscholes-rust/tests/: test_pricing.rs
src/libraries/canister_state_macro/: Cargo.toml
src/libraries/ic_ledger_utils/: Cargo.toml  README.md
src/libraries/ic_ledger_utils/src/: icrc.rs  icrc_impls.rs  lib.rs  services.rs  types.rs
src/libraries/ic_utils/: Cargo.toml
src/libraries/ic_utils/src/: biguint_f64.rs  biguint_u128.rs  bytes_conversion.rs  constants.rs  lib.rs  principal_conversion.rs  time.rs  timestamp_to_date.rs
src/libraries/management_canister/: Cargo.toml
src/libraries/management_canister/src/: lib.rs  xrc.rs
src/libraries/minter_utils/: Cargo.toml
src/libraries/minter_utils/src/: ckbtc.rs  lib.rs
src/minter/: ckbtc_minter.did  ckbtc_minter.wasm  cketh_minter.did
tests/: accounts.spec.ts  global-setup.ts
tests/integration/accounts/: accounts.spec.ts
tests/integration/insurance/: 1_insurance.spec.ts  2_insurance.spec.ts
tests/integration/main/: main.spec.ts
tests/integration/options/: 1_options.spec.ts  2_options.spec.ts  3_options.spec.ts  4_options.spec.ts  5_options.spec.ts  6_options.spec.ts  7_options.spec.ts  8_options.spec.ts
tests/unit/accounts/: accounts.spec.ts
tests/unit/insurance/: insurance.spec.ts
tests/unit/insurance/methods/: create_insurance.ts
tests/unit/main/: main.spec.ts
tests/unit/options/: options.spec.ts
tests/utils/: configs.ts  constants.ts  exports.ts  helpers.ts  types.ts
tests/utils/methods/insurance/: balances.ts  buy_insurance.ts  create_insurance.ts  sell_insurance_contract.ts  set_ledger_ids.ts
tests/utils/methods/ledgers/: approve.ts  balance.ts  fee.ts  pic_ledger.ts
tests/utils/non-pic/: constants.ts  mint_to_account.ts  setup-canister.ts  utils.ts
wasms/: accounts.wasm  aegis_index.wasm  ckbtc_ledger.wasm  cketh_minter.wasm  insurance.wasm  kyt.wasm  main.wasm  options.wasm
(+121 files in other folders)
