[workspace]
members = [
    "src/canisters/accounts",
    "src/libraries/canister_state_macro",
    "src/libraries/serializer",
    "src/libraries/*",

]

resolver = "2"

[workspace.lints.rust]
unused = "allow"

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.13.1"
ic-cdk-timers = "0.7.0"
serde = { version = "1.0.193", features = ["derive"] }
ic-stable-structures = "0.6.2"
byteorder = "1.5.0"
icrc-ledger-types = "0.1.5"
serde_bytes = "0.11.14"
hex = { version = "0.4.3", features = ["serde"] }
tracing = "0.1"
rmp-serde = "1.1.2"
ciborium = "0.2.2"
canister_state_macro = { path = "src/libraries/canister_state_macro" }
serializer = { path = "src/libraries/serializer" }
stable_memory = { path = "src/libraries/stable_memory" }
minter_utils = { path = "src/libraries/minter_utils" }
ic_ledger_utils = { path = "src/libraries/ic_ledger_utils" }
ic_utils = { path = "src/libraries/ic_utils" }


[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false
