[workspace]
members = [
    "src/canisters/accounts",
    "src/canisters/insurance",
    "src/canisters/main",
    "src/libraries/canister_state_macro",
    "src/libraries/serializer",
    "src/libraries/*",

]

resolver = "2"


[workspace.dependencies]
candid = "0.10.10"
ic-cdk = "0.16.0"
ic-cdk-timers = "0.10.0"
serde = { version = "1.0.193", features = ["derive"] }
ic-stable-structures = "0.6.5"
byteorder = "1.5.0"
icrc-ledger-types = "0.1.5"
serde_bytes = "0.11.14"
hex = { version = "0.4.3", features = ["serde"] }
tracing = "0.1"
rmp-serde = "1.1.2"
ciborium = "0.2.2"
canister_state_macro = { path = "src/libraries/canister_state_macro" }
serializer = { path = "src/libraries/serializer" }
stable_memory = { path = "src/libraries/stable_memory" }
minter_utils = { path = "src/libraries/minter_utils" }
ic_ledger_utils = { path = "src/libraries/ic_ledger_utils" }
ic_utils = { path = "src/libraries/ic_utils" }
serde_json = "1.0.117"
num-bigint = "0.4.6"

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
debug = false
