[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
ic-cdk = "0.13.1"
ic-cdk-timers = "0.7.0"
serde = { version = "1.0.193", features = ["derive"] }
ic-stable-structures = "0.6.2"
byteorder = "1.5.0"
icrc-ledger-types = "0.1.5"
sha2 = "0.10.8"
serde_bytes = "0.11.14"
