[package]
name = "accounts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
ic-stable-structures.workspace = true
byteorder.workspace = true
icrc-ledger-types.workspace = true
serde_bytes.workspace = true
hex.workspace = true
