[package]
name = "options"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
serde.workspace = true
ic-stable-structures.workspace = true
icrc-ledger-types.workspace = true
serde_bytes.workspace = true
tracing.workspace = true
rmp-serde.workspace = true
canister_state_macro.workspace = true
serializer.workspace = true
stable_memory.workspace = true
minter_utils.workspace = true
ic_ledger_utils.workspace = true
ic_utils.workspace = true
serde_json.workspace = true
num-bigint.workspace = true
ethers-core.workspace = true
management_canister.workspace = true
getrandom = { version = "0.2", features = ["custom"] }
blackscholes.workspace=true
